--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 80px 1fr;
+  grid-template-rows: 140px 1fr;
   max-width: 1200px;
 
   input {
@@ -46,7 +46,7 @@
 }
 
 .beercard {
-
+  max-height: 400px;
   max-width: 250px;
   border: 1px solid rgba(0, 0, 255, 0.2);
   border-radius: 10px;
@@ -100,6 +100,7 @@
     &:hover {
       box-shadow: -5px -3px 3px -3px rgba(34, 60, 80, 0.33);
     }
+
     &:active {
       transform: scale(0.95);
     }
@@ -119,6 +120,7 @@
   justify-content: center;
   padding: 30px;
   border-top: 1px solid rgba(0, 0, 255, 0.2);
+
   p:nth-child(1) {
     text-align: start;
     font-weight: bolder;
