--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,4 @@
-
+$border: 1px solid rgba(0, 0, 255, 0.2);
 
 .container {
   padding: 10px;
@@ -21,7 +21,7 @@
     min-width: 80%;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.05);
-    border: 1px solid rgba(0, 0, 255, 0.2);
+    border: $border;
     border-radius: 20px;
     text-align: center;
     margin-bottom: 25px;
@@ -50,7 +50,7 @@
 .beercard {
   max-height: 400px;
   max-width: 250px;
-  border: 1px solid rgba(0, 0, 255, 0.2);
+  border: $border;
   border-radius: 10px;
   padding: 10px;
 
@@ -74,7 +74,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid rgba(0, 0, 255, 0.2);
+  border: $border;
   max-width: 1200px;
 
   h1 {
@@ -95,7 +95,7 @@
     left: 20px;
     background-color: rgba(0, 0, 255, 0.1);
     padding: 5px;
-    border: 1px solid rgba(0, 0, 255, 0.2);
+    border: $border;
     color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
 
@@ -121,7 +121,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 30px;
-  border-top: 1px solid rgba(0, 0, 255, 0.2);
+  border-top: 1px solid  rgba(0, 0, 255, 0.2);
 
   p:nth-child(1) {
     text-align: start;
@@ -139,7 +139,7 @@
 
   table {
     border-collapse: collapse;
-    border: 1px solid rgba(0, 0, 255, 0.2);
+    border: $border;
     min-width: 200px;
   }
 
@@ -148,7 +148,7 @@
   }
 
   tr:nth-child(1) {
-    border-bottom: 1px solid rgba(0, 0, 255, 0.2);
+    border-bottom: $border;
   }
 
 
@@ -161,7 +161,7 @@
     justify-content: space-between;
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 400px) {
   .beerBig {
     button {
       display: none;
